--- a/AnatomLabs+ 2/mobile/package.json
+++ b/AnatomLabs+ 2/mobile/package.json
@@ -23,9 +23,11 @@
     "expo-asset": "^12.0.12",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "^1.0.10",
+    "expo-camera": "~17.0.10",
     "expo-file-system": "^19.0.21",
     "expo-gl": "^16.0.10",
     "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
